objects/Global_Account_Controller__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Handles Custom Account Visualforce Pages Redirection based on Record Types</description>
    <fields>
        <fullName>Global_Account_Action__c</fullName>
        <description>Read / Edit / Create</description>
        <inlineHelpText>Read / Edit / Create</inlineHelpText>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Customized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify if Role is used for redirection of pages.</description>
        <inlineHelpText>Used to identify if Role is used for redirection of pages.
Checked: Pages are redirected using role as priority over record type
Unchecked: Pages are redirected using record type only</inlineHelpText>
        <label>Customized for Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Account_Public_Group__c</fullName>
        <label>Public Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Record_Type__c</fullName>
        <description>Account Record Type API Name</description>
        <inlineHelpText>Account Record Type API Name</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Redirected_Page__c</fullName>
        <description>API Name of Visualforce page or default pages URL used to override Account Veiw / Edit / New</description>
        <inlineHelpText>API Name of Visualforce page or default pages URL used to override Account Veiw / Edit / New</inlineHelpText>
        <label>Redirected Page</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Role__c</fullName>
        <description>API Name of Role</description>
        <inlineHelpText>API Name of Role</inlineHelpText>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Global Account Controller</label>
    <listViews>
        <fullName>All_ASI</fullName>
        <columns>NAME</columns>
        <columns>Global_Account_Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Global_Account_Record_Type__c</columns>
        <columns>Global_Account_Redirected_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ASI</value>
        </filters>
        <label>All ASI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_LATAM</fullName>
        <columns>NAME</columns>
        <columns>Global_Account_Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Global_Account_Record_Type__c</columns>
        <columns>Global_Account_Redirected_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>LAT</value>
        </filters>
        <label>All LATAM</label>
        <language>en_US</language>
    </listViews>
</CustomObject>